SERVER-85513 Handle ShardNotFound errors in the cleanup phase of the create coordinator (#21250)

GitOrigin-RevId: 3b970869d31c7f313699aa9726cec77d1cc49821